Filled little white gaps at top of fixed column headers on front-page.

--- a/style.css
+++ b/style.css
@@ -462,6 +462,8 @@ ul.popular-list .popular-title a {
 	top: 0px;
 	margin-top: 0px;
 	border-top: 15px solid white;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
 }
 
 .front-bottom {
